# stock_mcp

./: .gitignore  DEMO_RESTART.md  README.md
.github/: copilot-instructions.md
.github/agents/: .agent-client.agent.md  .azure-infra.agent.md  .backend.agent.md  .cicd-deploy.agent.md  .frontend.agent.md  .mcp-server.agent.md
.github/workflows/: deploy-apps.yml  infra-terraform.yml
agent-client/: .gitignore  README.md  agent.py  fast-agent.secrets.yaml.example  fast-agent.yaml  pyproject.toml
backend/: README.md  auth.py  main.py  pyproject.toml  startup.sh
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  msal.config.ts  stock.service.ts
frontend/src/environments/: environment.prod.ts.example  environment.ts.example
infra/: .gitignore  README.md  main.tf  terraform.tfvars.example
mcp-server/: .env.example  .gitignore  README.md  main.py  pyproject.toml  startup.sh
