[project]
name = "mcp-server"
version = "0.1.0"
description = "Stock Management MCP Server (SSE transport, secured with Entra ID OAuth via FastMCP AzureProvider)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp[azure]>=2.13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]
